--- a/wsionic/www/templates/repository/detail.html
+++ b/wsionic/www/templates/repository/detail.html
@@ -13,7 +13,7 @@
     <br>
         <font size="2" color="gray" >Jenis Barang : {{repository.jenis_barang}}</font>
     </p>
-    <button class="button button-balanced button-block" ng-click="edit()">Edit Data Barang</button>
+    <button class="button button-balanced button-block" ng-click="editModal()">Edit Data Barang</button>
 </ion-content>
 <script id="edit.html" type="text/ng-template">
         <div class="modal">
